# server-dashboard

./: .gitignore  Cargo.toml  README.md  index.html
assets/: AboutView.3c0db1f2.js  AboutView.9d00fb88.js  AboutView.e8e007ff.js  index.71d6e0a6.css  index.7cf0854a.js  index.92d29e38.js  index.97baaf76.js  index.e1de94ed.css
client-dashboard/: README.md  index.html  package-lock.json  package.json
client-dashboard/src/: App.vue  main.ts
client-dashboard/src/assets/: base.css
client-dashboard/src/components/: Graph.vue  LAGraph.vue  RamGraph.vue  ServerItem.vue  ServerPane.vue  TGraph.vue
client-dashboard/src/views/: HomeView.vue
server-node/: Cargo.toml
server-node/src/: lib.rs  main.rs
server-relay/: Cargo.toml  servers.json
server-relay/src/: lib.rs  main.rs
