[package]
name = "server-node"
version = "0.4.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { verison = "1.11.0", features = ["attributes"] }
anyhow = "1.0.57"
tide = "0.16.0"
serde = { version = "1.0.137", features = ["serde_derive"] }
sysinfo = "0.23.13"

[profile.release]
profile-rustflags = [
	"-C", "link-arg=-fuse-ld=lld"
]
strip = true
panic = "abort"
