[package]
name = "server-relay"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["serde_derive"] }
anyhow = "1.0.57"
lazy_static = "1.4.0"
serde_json = "1.0.81"

[profile.release]
profile-rustflags = [
	"-C", "link-arg=-fuse-ld=lld"
]
strip = true
panic = "abort"
